Bug 344971 - KInfoCenter hangs when attempting to open OpenGL module
Summary: KInfoCenter hangs when attempting to open OpenGL module
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: OpenGL (other bugs)
Version First Reported In: 5.3.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
: 346279 346883 347993 348303 349873 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-09 10:35 UTC by Ragnar Thomsen
Modified: 2015-07-10 14:59 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments
It freezes. (83.16 KB, image/png)
2015-03-11 22:04 UTC, ali.sherif10
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ragnar Thomsen 2015-03-09 10:35:37 UTC
The OpenGL module of KInfoCenter will not open in Plasma 5.2.1. KInfoCenter freezes when attempting to open the module and the mouse cursor shows loading indefinitely. This occurs with both Mesa 10.4.x and 10.5.0. 

The following console output is generated when I click the OpenGL module:
Error: glXMakeCurrent failed
Comment 1 Ragnar Thomsen 2015-03-09 10:40:20 UTC
I have an Intel Sandy Bridge integrated graphics chip and use v.2.99.917 of the driver.
Comment 2 Hrvoje Senjan 2015-03-10 02:08:44 UTC
i can confirm this with kinfocenter master and:
OpenGL renderer string: Gallium 0.4 on AMD RV635
OpenGL core profile version string: 3.3 (Core Profile) Mesa 10.6.0-devel
OpenGL core profile shading language version string: 3.30
Comment 3 ali.sherif10 2015-03-11 22:02:29 UTC
Distribution: Kubuntu 15.04 beta 1.
I confirm it. I've the same bug. If I click Graphical Information then OpenGL, it loads forever. I also got the same error.
Error: glXMakeCurrent failed
Comment 4 ali.sherif10 2015-03-11 22:04:40 UTC
Created attachment 91537 [details]
It freezes.
Comment 5 ali.sherif10 2015-03-11 22:11:49 UTC
I've switchable graphics (Intel & AMD).
Comment 6 Ragnar Thomsen 2015-04-17 09:31:45 UTC
Still occurs with plasma 5.2.95 and mesa 10.5.3.
Comment 7 ali.sherif10 2015-04-24 11:24:03 UTC
It exists in Kubuntu 15.04 stable version.
Make it confirmed. It affects many people.
Comment 8 Christoph Feck 2015-05-02 22:05:19 UTC
*** Bug 346279 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2015-05-02 22:06:12 UTC
*** Bug 346883 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2015-05-23 15:24:15 UTC
*** Bug 347993 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2015-05-31 18:30:15 UTC
*** Bug 348303 has been marked as a duplicate of this bug. ***
Comment 12 Ragnar Thomsen 2015-06-03 11:03:07 UTC
Still happens with Plasma 5.3.1 and Mesa 10.5.6.
Comment 13 Martin Flöser 2015-06-03 14:23:37 UTC
The problem seems to be related to creating an indirect rendering context. If I remove that from the code it works.
Comment 14 Martin Flöser 2015-06-03 15:42:52 UTC
https://git.reviewboard.kde.org/r/123995/
Comment 15 Martin Flöser 2015-06-11 01:27:12 UTC
Git commit 9f9814219d899a64dd5b68711534ec7206858147 by Martin Gräßlin.
Committed on 11/06/2015 at 01:27.
Pushed by graesslin into branch 'master'.

Remove querying the indirect rendering context

Mesa fails to make an indirect rendering context current and freezes
in the next X11 call.

Removing indirect rendering support seems like a workaround for the
problem, but realisticly it's no longer interesting what indirect
rendering provides if direct rendering is available. If direct
rendering is not available, it will pick indirect instead.
FIXED-IN: 5.4.0
REVIEW: 123995

M  +0    -2    Modules/opengl/opengl.cpp

http://commits.kde.org/kinfocenter/9f9814219d899a64dd5b68711534ec7206858147
Comment 16 Christoph Feck 2015-07-10 14:59:36 UTC
*** Bug 349873 has been marked as a duplicate of this bug. ***